# dex

./: README.md
solana/: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
solana/programs/batch/: Cargo.toml
solana/programs/factory_stub/: Cargo.toml
solana/programs/pair_stub/: Cargo.toml
solana/tests/: check_batch_balance.sh  coinjoin.devnet.e2e.ts  coinjoin.test.ts  coinjoin_monitor_v2.sh  devnet.deploy.test.ts  devnet.fixtures.ts  init_contract.sh  mint.devnet.spl.ts  test_coinjoin_stellar_cli.sh  test_contract_query.sh  test_query.sh
stellar/: README.md
stellar/batch/: COINJOIN_TESTING_GUIDE.md  Cargo.toml  README.md  private_swap_alerts.json
stellar/batch/src/: batch_executor.rs  coinjoin.rs  error.rs  helpers.rs  integration_test.rs  lib.rs  lib.rs.backup  multicall.rs
stellar/batch/src/tests/: basic_coinjoin.rs  coinjoin_e2e.rs  mock_factory.rs  mod.rs  test_mock_factory.rs
stellar/batch/test_snapshots/tests/basic_coinjoin/: double_initialize_fails.1.json
stellar/batch/test_snapshots/tests/coinjoin_e2e/: coinjoin_flow_mixes_three_participants.1.json
stellar/batch/test_snapshots/tests/test_mock_factory/: test_batcher_with_mock_factory.1.json  test_factory_error_handling.1.json  test_multiple_pairs_scenario.1.json  test_order_submission_with_mock_factory.1.json  test_performance_with_mock_factory.1.json
stellar/batch/tests/: testnet_sanity.sh
stellar/tests/: check_address_type.sh  coinjoin_monitor_simple.sh  coinjoin_monitor_v1.sh  test_args.sh  test_coinjoin.sh  test_coinjoin_fixed.sh
(+3 files in other folders)
